2022-09-01T01:48:34Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2968310770
* notice: last 14d: unq all: 8 21
* notice: prev accum: outdated-unq outdated-all / unq all: 80 117 / 91 135
* notice: next accum: outdated-unq outdated-all / unq all: 80 117 / 94 138
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +4 +5 -0 -0 / 4 5
* notice: removed / changed dates: [] / [2022-08-31]

2022-08-31T16:25:03Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2965455858
* notice: last 14d: unq all: 7 18
* notice: prev accum: outdated-unq outdated-all / unq all: 80 117 / 90 133
* notice: next accum: outdated-unq outdated-all / unq all: 80 117 / 91 135
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-08-31]

2022-08-30T02:06:28Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2953049020
* notice: last 14d: unq all: 7 16
* notice: prev accum: outdated-unq outdated-all / unq all: 80 117 / 89 129
* notice: next accum: outdated-unq outdated-all / unq all: 80 117 / 90 133
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +4 +8 -0 -0 / 4 8
* notice: removed / changed dates: [] / [2022-08-29]

2022-08-29T16:23:56Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2950101890
* notice: last 14d: unq all: 6 12
* notice: prev accum: outdated-unq outdated-all / unq all: 80 117 / 86 125
* notice: next accum: outdated-unq outdated-all / unq all: 80 117 / 89 129
* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -0 -0 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [] / [2022-08-29]

2022-08-27T01:53:05Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2937590230
* notice: last 14d: unq all: 5 8