@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-01T01:48:34Z",
-  "count_outdated" : 117,
-  "uniques_outdated" : 80,
+  "timestamp" : "2022-09-01T08:24:32Z",
+  "count_outdated" : 119,
+  "uniques_outdated" : 81,
   "count" : 138,
   "uniques" : 94,
   "clones" : [
-    {
-      "timestamp": "2022-08-18T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-26T00:00:00Z",
       "count": 6,
