@@ -1,12 +1,7 @@
 {
-  "count": 21,
+  "count": 19,
   "uniques": 8,
   "clones": [
-    {
-      "timestamp": "2022-08-18T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-26T00:00:00Z",
       "count": 6,
