@@ -1,3 +1,11 @@
+2022-09-01T08:24:32Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2970054425
+* notice: last 14d: unq all: 8 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 80 117 / 94 138
+* notice: next accum: outdated-unq outdated-all / unq all: 81 119 / 94 138
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-18] / []
+
 2022-09-01T01:48:34Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2968310770
 * notice: last 14d: unq all: 8 21
